4th commit - style edit

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
         border-radius: 10px;
         font-size: 20px;
         font-family: 'Courier New', Courier, monospace;
-        background: #f0d2d7;
+        background: #bfffbb;
         float: left;
         margin-right: 10px;
     }
