--- a/main.css
+++ b/main.css
@@ -31,6 +31,22 @@
 .blue{
     background: #84dcf4;
 }
+.red{
+    background: red;
+}
+.trash
+{
+    width: 120px;
+    height: 40px;
+    border: 1px solid;
+    cursor:pointer;
+    position: absolute;
+    left: 400px;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    font-size: 20px;
+
+}
 
 .sticky{
     width: 200px;
